Update corner color Fix horizontal scrollbar size

--- a/src/assets/css/global/_main.scss
+++ b/src/assets/css/global/_main.scss
@@ -38,6 +38,7 @@ hr {
 }
 
 ::-webkit-scrollbar {
+  height: 12px;
   width: 12px;
 }
 
